@@ -11,19 +11,70 @@ package WB26WRPROJECTWorkspaceCreator;
 # ************************************************************
 
 use strict;
+use File::Basename;
 
 use WB26WRPROJECTProjectCreator;
 use WorkspaceCreator;
 
 use vars qw(@ISA);
-@ISA = qw(WorkspaceBase WorkspaceCreator);
+@ISA = qw(WorkspaceCreator);
 
 # ************************************************************
 # Subroutine Section
 # ************************************************************
 
-sub write_workspace {
-  return 1;
+sub workspace_file_name {
+  #my($self) = shift;
+  return 'wb26projects.lst';
 }
+
+sub pre_workspace {
+  my($self) = shift;
+  my($fh)   = shift;
+  my($crlf) = $self->crlf();
+
+  print $fh '#----------------------------------------------------------------------------', $crlf,
+            '#       WindRiver Workbench generator', $crlf,
+            '#', $crlf,
+            '# $Id$', $crlf,
+            '#', $crlf,
+            '# This file was generated by MPC.  Any changes made directly to', $crlf,
+            '# this file will be lost the next time it is generated.', $crlf,
+            '# MPC Command:', $crlf,
+            "# $0 @ARGV", $crlf,
+            '#----------------------------------------------------------------------------', $crlf,
+}
+
+sub write_comps {
+  my($self)     = shift;
+  my($fh)       = shift;
+  my($projects) = $self->get_projects();
+  my($pjs)      = $self->get_project_info();
+  my(%targnum)  = ();
+  my(@list)     = $self->number_target_deps($projects, $pjs, \%targnum, 0);
+  my($crlf)     = $self->crlf();
+
+  ## Print out each target separately
+  foreach my $project (@list) {
+    $self->write_project_targets($fh, ,[ $project ]);
+  }
+}
+
+sub write_project_targets {
+  my($self)    = shift;
+  my($fh)      = shift;
+  my($list)    = shift;
+  my($crlf)    = $self->crlf();
+
+  foreach my $project (@$list) {
+    my($dir)    = $self->mpc_dirname($project);
+    my($chdir)  = 0;
+    my($back)   = '';
+    my($cwd)    = $self->getcwd();
+
+    print $fh "$dir" . "/.project" . "$crlf";
+  }
+}
+
 
 1;
